--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ Temporary Items
 
 
 # End of https://www.gitignore.io/api/macos
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
