--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build:css": "gulp css",
-    "build": "gulp css"
+    "build": "gulp js"
   },
   "devDependencies": {
-    "browser-sync": "^2.29.3",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.4.0",
+    "gulp": "^5.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-uglify": "^3.0.2",
-    "sass": "^1.77.0"
+    "gulp-uglify": "^3.0.2"
   }
 }
