--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "gulp js"
+    "build": "gulp",
+    "minify:js": "gulp js:minify",
+    "minify:css": "gulp css:minify",
+    "serve": "python3 -m http.server 8000",
+    "dev": "npm run build && npm run serve"
   },
   "devDependencies": {
     "gulp": "^5.0.1",
+    "gulp-clean-css": "^4.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2"
   }
