--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "private": true,
   "scripts": {
     "build": "gulp",
+    "watch": "gulp watch",
     "minify:js": "gulp js:minify",
     "minify:css": "gulp css:minify",
     "serve": "python3 -m http.server 8000",
     "dev": "npm run build && npm run serve"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "gulp": "^5.0.1",
     "gulp-clean-css": "^4.3.0",
+    "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-uglify": "^3.0.2"
-  }
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^2.1.0"
+  },
+  "browserslist": [
+    ">0.5%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
