--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-terser": "^2.1.0",
-    "imagemin-cli": "^8.0.0",
-    "imagemin-pngquant": "^10.0.0",
-    "simple-icons": "^15.9.0"
+  "gulp-terser": "^2.1.0",
+  "imagemin-cli": "^8.0.0",
+  "imagemin-pngquant": "^10.0.0"
   },
   "browserslist": [
     ">0.5%",
